[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/characters/Player.gd" type="Script" id=1]
[ext_resource path="res://animations/player_black.tres" type="SpriteFrames" id=2]
[ext_resource path="res://particles/black_particle.png" type="Texture" id=3]
[ext_resource path="res://sounds/jump_sound.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/landing_sound.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/switch_skin_sound.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/fail_sound.wav" type="AudioStream" id=7]
[ext_resource path="res://sprites/UI/pixil-layer-Background.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.4809, 17.087 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 26.1452 )

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Dust1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dust2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Dust2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11.143, 35.6 ), Vector2( 29.153, 23.978 ), Vector2( 36.665, 30.417 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Dust1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -17.1426, 35.6004 ), Vector2( -29.1527, 23.9777 ), Vector2( -36.6651, 30.4169 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Dust1:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 49.0, 59.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Dust1:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.7, 0.7 ), Vector2( 0.5, 0.5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Dust2:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -49.0, -59.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Dust2:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.7, 0.7 ), Vector2( 0.5, 0.5 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
collision/safe_margin = 2.666
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "run"
frame = 1

[node name="foot_collision" type="CollisionShape2D" parent="."]
position = Vector2( -2, -32 )
shape = SubResource( 1 )

[node name="body_colision" type="CollisionShape2D" parent="."]
position = Vector2( -3, 12 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 400, -150 )
current = true
limit_top = 0
limit_bottom = 0

[node name="points_timer" type="Timer" parent="Camera2D"]
autostart = true

[node name="AnimationLanded" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
anims/smooth_landing = SubResource( 3 )

[node name="LandingDust" type="Node2D" parent="."]
visible = false

[node name="LandingDustAnimation" type="AnimationPlayer" parent="LandingDust"]
anims/landing_dust = SubResource( 4 )

[node name="Dust1" type="Sprite" parent="LandingDust"]
position = Vector2( -17.1426, 35.6004 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Dust2" type="Sprite" parent="LandingDust"]
position = Vector2( 11.143, 35.6 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -40.0
bus = "FX"

[node name="landing_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -40.0
bus = "FX"

[node name="switch_skin_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -40.0
bus = "FX"

[node name="fail_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -40.0
bus = "FX"

[node name="dialog_box" type="Sprite" parent="."]
visible = false
position = Vector2( 50, -65 )
texture = ExtResource( 8 )

[node name="Icon" type="Sprite" parent="dialog_box"]
position = Vector2( 0, -5 )

[node name="time_to_spawn_dialog_box2" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="time_to_kill_dialog_box" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Camera2D/points_timer" to="." method="_on_points_timer_timeout"]
[connection signal="finished" from="fail_sound" to="." method="_on_fail_sound_finished"]
[connection signal="timeout" from="time_to_spawn_dialog_box2" to="." method="_on_time_to_spawn_dialog_box2_timeout"]
[connection signal="timeout" from="time_to_kill_dialog_box" to="." method="_on_time_to_kill_dialog_box_timeout"]
